@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 18-02-2006 changed: "Delete" and "Rename" in the context menu are only enabled if the share supports them
  - 18-02-2006 changed: iTunes playlists now adhere to the "shuffle playlists on load" option if you use PLAY on them
  - 18-02-2006 changed: Keyboard updates all buttons with the same id when you change from Symbols -> Caps -> Lower case.
  - 18-02-2006 fixed: Video Calibration activated via the video OSD wasn't working.
